styling projects dashboard

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -87,3 +87,12 @@
 .card-bottom-border {
   border-bottom: 1px solid rgba(0,0,0,0.2);
 }
+.card-padding {
+  padding: 12.5px 0px;
+}
+.card-padding-bottom {
+  padding-bottom: 20px;
+}
+.card-margin {
+  margin-top: 20px;
+}
