--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,9 @@
         <%= f.input :password_confirmation, required: true %>
         <%= f.input :first_name, required: true %>
         <%= f.input :last_name, required: true %>
+        <%= f.input :job_title, required: true %>
+        <%= f.input :location, required: true %>
+        <%= f.input :phone, required: true %>
         <%= f.input :bio, required: false %>
         <%= f.input :profile_picture, required: false %>
         <%= f.input :profile_picture_cache, as: :hidden %>
