grid on profiles w/ new features

--- a/app/views/profiles/projects.html.erb
+++ b/app/views/profiles/projects.html.erb
@@ -6,7 +6,7 @@
       <!-- if project.active -->
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="card-dashboard-frame">
-            <div class="card card-dashboard-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= project.photo %>);">
+            <div class="card card-dashboard-picture" style="background-image: url(<%= project.photo %>);">
             </div>
             <div class="card-dashboard-details">
               <div class="card-bottom-border">
@@ -40,7 +40,7 @@
       <!-- if !project.active -->
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="card-dashboard-frame">
-            <div class="card card-dashboard-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= project.photo %>);">
+            <div class="card card-dashboard-picture" style="background-image: url(<%= project.photo %>);">
             </div>
             <div class="card-dashboard-details">
               <div class="card-bottom-border">
