--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,6 +8,7 @@
   border-radius: 2px;
   min-width: 210px;
   max-width: 300px;
+  flex: 1 0 auto;
   &:hover {
     opacity: 0.8;
   }
@@ -58,6 +59,7 @@
   z-index: 2;
 }
 
+
 /* DASHBOARD */
 
 .card-dashboard-frame {
@@ -95,4 +97,20 @@
 }
 .card-margin {
   margin-top: 20px;
+}
+
+
+/* PROFILE */
+
+.card-profile{
+  background: white;
+  padding: 50px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 10px;
+}
+.card-content {
+  min-width: 100%;
 }
