--- a/app/assets/stylesheets/pages/_profile-show.scss
+++ b/app/assets/stylesheets/pages/_profile-show.scss
@@ -1,9 +1,96 @@
+/* TODO: design a CSS grid layout for user dashboard */
+.profile {
+  display: grid;
+  grid-template-columns: 370px 1fr;
+  grid-template-rows: 320px 200px 1fr 200px;
+  padding: 30px;
+  h3 {
+    margin: 0;
+  }
+}
+.info-section {
+  grid-row: 1 / span 2;
+  grid-column: 1 / span 1;
+  img {
+    margin-bottom: 20px;
+  }
+  a {
+    margin-bottom: 12.5px;
+  }
+}
+.description-section {
+  grid-row: 1 / span 1;
+  grid-column: 2 / span 1;
+}
+.experiences-section {
+  grid-row: 2 / span 1;
+  grid-column: 2 / span 1;
+}
+.projects-section {
+  grid-row: 3 / span 1;
+  grid-column: 1 / span 2;
+  height: 55vh;
+  padding: 20px;
+  margin-bottom: 10px;
+}
+.projects-display {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  min-width: 100%;
+}
+.reviews-section {
+  grid-row: 4 / span 1;
+  grid-column: 1 / span 2;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .profile-page {
   margin-top: 30px;
 }
 .profile-picture {
   height: 250px;
   width: 250px;
+  position: absolute;
 }
 .profile-edit {
   margin-top: 15px;
