added active and address to project class and filtered out inactive projects in index

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,9 +2,11 @@
   <div class="cards-container">
     <div class="row">
       <% @projects.each do |project| %>
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <%= render 'shared/project-card', project: project %>
-      </div>
+        <% if project.active %>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+            <%= render 'shared/project-card', project: project %>
+          </div>
+        <% end %>
       <% end %>
     </div>
   </div>
