--- a/app/assets/stylesheets/pages/_booking-show.scss
+++ b/app/assets/stylesheets/pages/_booking-show.scss
@@ -1,3 +1,9 @@
+.booking-banner {
+  height: 300px;
+}
+.background-white {
+  background: white;
+}
 .project-dates {
   display: flex;
   align-items: center;
@@ -10,7 +16,7 @@
 .volunteer-info {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   margin-bottom: 12.5px;
   img {
     margin: 0px;
