--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,19 +1,20 @@
+<div class="banner booking-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url(<%= @booking.project.photo %>);">
+  <div class="banner-content">
+    <h1>You're going to <%= @booking.project.location %>!</h1>
+  </div>
+</div>
+
 <div class="container">
   <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-xs-12 col-md-11">
-      <h2>You're going to <%= @booking.project.location %>!</h2>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-1"></div>
 
     <!-- Left side of booking show page -->
-    <div class="col-md-5">
-      <div class="card-dashboard-frame card-dashboard-details">
+    <div class="col-md-7">
+      <div class="card-dashboard-frame card-dashboard-details background-white">
+        <div>
+          <h3>Your booking's details</h3>
+        </div>
 
-        <div class="card-bottom-border project-dates">
+        <div class="card-bottom-border project-dates card-margin">
           <span>
             <strong>Check In</strong><br> <%= @booking.start_date.strftime("%a, %b %d, %Y") %>
           </span>
@@ -25,14 +26,23 @@
         <div class="card-bottom-border">
           <p><strong>Your fellow volunteers</strong></p>
           <% @booking.all_volunteers.each do |volunteer| %>
-            <div class="volunteer-info">
-              <%= link_to profile_path(volunteer) do %>
-                <%= cl_image_tag volunteer.profile_picture.url(:avatar),
-                class: "avatar", width: "50px" %>
-              <% end %>
-              <span><%= volunteer.first_name %> <%= volunteer.last_name %></span>
-            </div>
-            <!-- include start_date end_date of fellow volunteers-->
+            <% if volunteer != @booking.user %>
+              <div class="volunteer-info">
+                <%= link_to profile_path(volunteer) do %>
+                  <%= cl_image_tag volunteer.profile_picture.url(:avatar),
+                  class: "avatar", width: "50px" %>
+                <% end %>
+                <span><%= volunteer.first_name %> <%= volunteer.last_name %></span>
+                <span><%= volunteer.email %></span>
+                <% volunteer.bookings.each do |booking| %>
+                  <% if (booking.all_dates).overlaps?(@booking.all_dates) &&
+                         booking.project == @booking.project %>
+                    <span><%= booking.start_date.strftime("%a, %b %d") %></span>
+                    <span><%= booking.end_date.strftime("%a, %b %d") %></span>
+                  <% end %>
+                <% end %>
+              </div>
+            <% end %>
           <% end %>
         </div>
 
@@ -48,18 +58,18 @@
 
     <!-- Right side of booking show page -->
     <div class="col-md-4">
-      <div class="card-dashboard-frame card-dashboard-details">
+      <div class="card-dashboard-frame card-dashboard-details background-white">
+        <h3>Contact your host!</h3>
         <%= link_to profile_path(@booking.project.user) do %>
           <%= cl_image_tag @booking.project.user.profile_picture.url(:avatar),
           class: "avatar picture-margin", width: "100px" %>
         <% end %>
         <h4><%= @booking.project.user.first_name %> <%= @booking.project.user.last_name %></h4>
-        <p><i class="fas fa-phone"></i> Phone Number</p>
+        <p><i class="fas fa-phone"></i> <%= @booking.project.user.phone %></p>
         <p><i class="fas fa-at"></i> <%= @booking.project.user.email %></p>
         <p><i class="fas fa-map-pin"></i> Address</p>
       </div>
     </div>
 
-    <div class="col-md-1"></div>
   </div>
 </div>
