added address to booking show

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -67,7 +67,7 @@
         <h4><%= @booking.project.user.first_name %> <%= @booking.project.user.last_name %></h4>
         <p><i class="fas fa-phone"></i> <%= @booking.project.user.phone %></p>
         <p><i class="fas fa-at"></i> <%= @booking.project.user.email %></p>
-        <p><i class="fas fa-map-pin"></i> Address</p>
+        <p><i class="fas fa-map-pin"></i> <%= @booking.project.address %></p>
       </div>
     </div>
 
