--- a/app/views/profiles/projects.html.erb
+++ b/app/views/profiles/projects.html.erb
@@ -53,7 +53,7 @@
                 <p>Total bookings: <%= project.bookings.count %></p>
               </div>
               <div class="card-bottom-border card-padding">
-                <%= link_to "See details", project_path(project) %>
+                <%= link_to "See details", my_project_path(project) %>
               </div>
               <div class="card-margin">
                 <!-- Change "active" boolean to true -->
