--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -83,7 +83,7 @@
               <%= link_to "See details", booking_path(booking) %>
             </div>
             <div class="card-margin">
-              <%= link_to "Add review", booking_path(booking), class: "btn btn-action" %>
+               <%= link_to "Write a review", new_review_path(booking.project.user), class: "btn btn-action" %>
             </div>
           </div>
         </div>
