--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -110,6 +110,7 @@
   align-items: center;
   justify-content: space-around;
   margin: 10px;
+  border-radius: 2px;
 }
 .card-content {
   min-width: 100%;
