--- a/app/assets/stylesheets/pages/_profile-show.scss
+++ b/app/assets/stylesheets/pages/_profile-show.scss
@@ -12,6 +12,7 @@
 .info-section {
   grid-row: 1 / span 2;
   grid-column: 1 / span 1;
+  background-color: rgba(51,202,127, 0.4);
   img {
     margin-bottom: 20px;
   }
@@ -22,16 +23,19 @@
 .description-section {
   grid-row: 1 / span 1;
   grid-column: 2 / span 1;
+  background-color: rgba(125,207,182, 0.4);
 }
-.experiences-section {
+.experience-section {
   grid-row: 2 / span 1;
   grid-column: 2 / span 1;
+  background-color: rgba(135,187,162,0.4);
 }
 .projects-section {
   grid-row: 3 / span 1;
   grid-column: 1 / span 2;
   padding: 20px;
   margin-bottom: 10px;
+  background-color: rgba(252,159,91,0.6);
 }
 .projects-display {
   display: flex;
@@ -42,6 +46,7 @@
 .reviews-section {
   grid-row: 4 / span 1;
   grid-column: 1 / span 2;
+  background-color: rgba(51,202,127, 0.4);
 }
 
 #reviews {
