--- a/app/views/shared/_logged-in-navbar.html.erb
+++ b/app/views/shared/_logged-in-navbar.html.erb
@@ -19,7 +19,9 @@
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <%= link_to "Create new project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <%= link_to "My Projects", my_projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <% if current_user.projects.length > 0 %>
+      <%= link_to "My Projects", my_projects_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <% end %>
     <%= link_to "My Bookings", bookings_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to profile_path(current_user) do %>
