added address to form and strong params

--- a/app/views/shared/_project-form.html.erb
+++ b/app/views/shared/_project-form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :description, required: true %>
     <%= f.input :full_description, required: true %>
     <%= f.input :location, required: true %>
+    <%= f.input :address, required: true %>
     <%= f.association :category, required: true %>
     <%= f.input :capacity, required: true %>
     <%= f.input :requirement, required: true %>
