--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,15 +1,21 @@
 <div class="main-container">
-  <div class="cards-container">
-    <div class="row">
-      <% @projects.each do |project| %>
-        <% if project.active %>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <%= render 'shared/project-card', project: project %>
-          </div>
+  <% if @projects.length > 0 %>
+    <div class="cards-container">
+      <div class="row">
+        <% @projects.each do |project| %>
+          <% if project.active %>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <%= render 'shared/project-card', project: project %>
+            </div>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
-  </div>
+  <% else %>
+    <div class="container">
+      <h4>Sorry, your search returned no results - click the logo to see all our projects!</h4>
+    </div>
+  <% end %>
   <div
   id="map"
   style="width: 100%;
